test/corpus/basic.txt
==================
Simple commands
==================
d
p
q
n

---

(script
  (command_list
    (command
      body: (delete_command))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (quit_command))
    (separator)
    (command
      body: (next_command))
    (separator)))

==================
Addresses
==================
1d
$p
/foo/p
1,3d
/foo/,$p
/foo/!d

---

(script
  (command_list
    (command
      addresses: (address
        (line_number_address))
      body: (delete_command))
    (separator)
    (command
      addresses: (address
        (last_line_address))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (regex_address
          pattern: (regex
            body: (regex_content))))
      body: (print_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (delete_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (regex_address
            pattern: (regex
              body: (regex_content))))
        end: (address
          (last_line_address)))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (regex_address
          pattern: (regex
            body: (regex_content))))
      negation: (negation)
      body: (delete_command))
    (separator)))

==================
Separators
==================
d;p
1d
2p

---

(script
  (command_list
    (command
      body: (delete_command))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (line_number_address))
      body: (delete_command))
    (separator)
    (command
      addresses: (address
        (line_number_address))
      body: (print_command))
    (separator)))

==================
Comments
==================
# comment
d

---

(script
  (command_list
    (comment_command)
    (separator)
    (command
      body: (delete_command))
    (separator)))

==================
First-line silent
==================
#n
p

---

(script
  (first_line_silent)
  (command_list
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
Substitution skeleton
==================
s/a/b/
s/a/b/g
s#/#_#g
s/a\/b/c/
s/a//p
s#x#y#

---

(script
  (command_list
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (global_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (global_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        flags: (substitute_flags
          (print_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)))

==================
Block
==================
{
  1d
  /x/p
}

---

(script
  (command_list
    (command
      body: (block_command
        (command_list
          (separator)
          (command
            addresses: (address
              (line_number_address))
            body: (delete_command))
          (separator)
          (command
            addresses: (address
              (regex_address
                pattern: (regex
                  body: (regex_content))))
            body: (print_command))
          (separator))))
    (separator)))

==================
Escaped regex addresses
==================
\#^route:/api/#p
\#x#!d

---

(script
  (command_list
    (command
      addresses: (address
        (escaped_regex_address
          pattern: (regex
            body: (regex_content))))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (escaped_regex_address
          pattern: (regex
            body: (regex_content))))
      negation: (negation)
      body: (delete_command))
    (separator)))

==================
Additional simple commands
==================
h
H
g
G
x
N
P
D
=
l

---

(script
  (command_list
    (command
      body: (hold_command))
    (separator)
    (command
      body: (hold_append_command))
    (separator)
    (command
      body: (get_command))
    (separator)
    (command
      body: (get_append_command))
    (separator)
    (command
      body: (exchange_command))
    (separator)
    (command
      body: (next_append_command))
    (separator)
    (command
      body: (print_first_line_command))
    (separator)
    (command
      body: (delete_first_line_command))
    (separator)
    (command
      body: (line_number_command))
    (separator)
    (command
      body: (list_command))
    (separator)))

==================
Labels and branches
==================
:ok
b
b ok
t ok

---

(script
  (command_list
    (command
      body: (label_command
        label: (label)))
    (separator)
    (command
      body: (branch_command))
    (separator)
    (command
      body: (branch_command
        label: (label)))
    (separator)
    (command
      body: (test_command
        label: (label)))
    (separator)))

==================
Translate command
==================
y/abc/ABC/

---

(script
  (command_list
    (command
      body: (translate_command
        source: (translate_source)
        destination: (translate_destination)))
    (separator)))

==================
Addressed substitute command
==================
/^flagp:/s/^flagp:/flagp=/p
s/a[;]b/c/

---

(script
  (command_list
    (command
      addresses: (address
        (regex_address
          pattern: (regex
            body: (regex_content))))
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (print_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)))

==================
Text commands
==================
i\
inserted before
a\
inserted after
c\
changed line

---

(script
  (command_list
    (command
      body: (insert_command
        text: (text_block)))
    (separator)
    (command
      body: (append_command
        text: (text_block)))
    (separator)
    (command
      body: (change_command
        text: (text_block)))
    (separator)))

==================
First-line silent only at script start
==================
p
#n is a comment after the first line

---

(script
  (command_list
    (command
      body: (print_command))
    (separator)
    (comment_command)
    (separator)))

==================
File commands
==================
r input.txt
w output.txt
/^x/r data file.txt

---

(script
  (command_list
    (command
      body: (read_command
        file: (file_argument)))
    (separator)
    (command
      body: (write_command
        file: (file_argument)))
    (separator)
    (command
      addresses: (address
        (regex_address
          pattern: (regex
            body: (regex_content))))
      body: (read_command
        file: (file_argument)))
    (separator)))

==================
Text continuation
==================
a\
line one\
line two

---

(script
  (command_list
    (command
      body: (append_command
        text: (text_block)))
    (separator)))

==================
Delimiter-aware substitute commands
==================
s/a/b/;p
s#a#b#p;d
s/a\/b/c/
s#^/api/#route:#g
s/a/b/2p
s/a/b/w out.txt
s#x#y#;# comment

---

(script
  (command_list
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (print_flag))))
    (separator)
    (command
      body: (delete_command))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (global_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (occurrence_flag)
          (print_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (write_flag
            file: (file_argument)))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)
    (comment_command)
    (separator)))

==================
Delimiter-aware translate commands
==================
y/abc/ABC/;p
y#/#_#

---

(script
  (command_list
    (command
      body: (translate_command
        source: (translate_source)
        destination: (translate_destination)))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (translate_command
        source: (translate_source)
        destination: (translate_destination)))
    (separator)))

==================
General escaped regex addresses
==================
\@^/api/@p
\|a/b|d

---

(script
  (command_list
    (command
      addresses: (address
        (escaped_regex_address
          pattern: (regex
            body: (regex_content))))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (escaped_regex_address
          pattern: (regex
            body: (regex_content))))
      body: (delete_command))
    (separator)))

==================
Regex operand edge cases
==================
/ a /p
/[]]/p
/[[]/p
/[[:digit:]]/p
\#^/api/#p

---

(script
  (command_list
    (command
      addresses: (address
        (regex_address
          pattern: (regex
            body: (regex_content))))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (regex_address
          pattern: (regex
            body: (regex_content))))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (regex_address
          pattern: (regex
            body: (regex_content))))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (regex_address
          pattern: (regex
            body: (regex_content))))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (escaped_regex_address
          pattern: (regex
            body: (regex_content))))
      body: (print_command))
    (separator)))

==================
Substitute operand edge cases
==================
s//x/
s/a//
s/ /_/g
s/[ ][ ]*/_/g
s#^/api/#route:#g
s/a\/b/c/
s/a/b/2p
s/a/b/w out.txt
s/^x$/replacement keeps [[:digit:]] \1 \& literal/
s/a/b/;p

---

(script
  (command_list
    (command
      body: (substitute_command
        pattern: (regex)
        replacement: (replacement)))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (global_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (global_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (global_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (occurrence_flag)
          (print_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (write_flag
            file: (file_argument)))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
Translate operand edge cases
==================
y/ /_/
y#/#_#

---

(script
  (command_list
    (command
      body: (translate_command
        source: (translate_source)
        destination: (translate_destination)))
    (separator)
    (command
      body: (translate_command
        source: (translate_source)
        destination: (translate_destination)))
    (separator)))

==================
POSIX address arity
==================
1q
$=
/x/r data.txt
1a\
append once
1i\
insert once
1,2c\
change range
1,2l
1,2d

---

(script
  (command_list
    (command
      addresses: (address
        (line_number_address))
      body: (quit_command))
    (separator)
    (command
      addresses: (address
        (last_line_address))
      body: (line_number_command))
    (separator)
    (command
      addresses: (address
        (regex_address
          pattern: (regex
            body: (regex_content))))
      body: (read_command
        file: (file_argument)))
    (separator)
    (command
      addresses: (address
        (line_number_address))
      body: (append_command
        text: (text_block)))
    (separator)
    (command
      addresses: (address
        (line_number_address))
      body: (insert_command
        text: (text_block)))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (change_command
        text: (text_block)))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (list_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (delete_command))
    (separator)))

==================
POSIX substitute flags
==================
s/a/b/g
s/a/b/2p
s/a/b/w out.txt;p

---

(script
  (command_list
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (global_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (occurrence_flag)
          (print_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (write_flag
            file: (file_argument)))))
    (separator)))

==================
POSIX replacement newline
==================
s/a/one\
two/

---

(script
  (command_list
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)))

==================
POSIX block terminators
==================
{p;}
{
  p
}

---

(script
  (command_list
    (command
      body: (block_command
        (command_list
          (command
            body: (print_command))
          (separator))))
    (separator)
    (command
      body: (block_command
        (command_list
          (separator)
          (command
            body: (print_command))
          (separator))))
    (separator)))

==================
POSIX line-terminated command boundaries
==================
d;b end
s/a/b/g;p
y/a/b/;p
b end
t end
:done

---

(script
  (command_list
    (command
      body: (delete_command))
    (separator)
    (command
      body: (branch_command
        label: (label)))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (global_flag))))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (translate_command
        source: (translate_source)
        destination: (translate_destination)))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (branch_command
        label: (label)))
    (separator)
    (command
      body: (test_command
        label: (label)))
    (separator)
    (command
      body: (label_command
        label: (label)))
    (separator)))

==================
POSIX block line-terminated command boundaries
==================
{p;}
{;p;}
{
  d;b done
}

---

(script
  (command_list
    (command
      body: (block_command
        (command_list
          (command
            body: (print_command))
          (separator))))
    (separator)
    (command
      body: (block_command
        (command_list
          (separator)
          (command
            body: (print_command))
          (separator))))
    (separator)
    (command
      body: (block_command
        (command_list
          (separator)
          (command
            body: (delete_command))
          (separator)
          (command
            body: (branch_command
              label: (label)))
          (separator))))
    (separator)))

==================
GNU address arity overrides
==================
1,2=
1,2r file

---

(script
  (command_list
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (line_number_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (read_command
        file: (file_argument)))
    (separator)))

==================
Invalid quit address arity recovery
==================
1,2q
p

---

(script
  (ERROR
    (address_range
      start: (address
        (line_number_address))
      end: (address
        (line_number_address))))
  (command_list
    (command
      body: (quit_command))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
Line-consuming file arguments
==================
r input.txt;p
w output.txt;p
s/a/b/w output.txt;p

---

(script
  (command_list
    (command
      body: (read_command
        file: (file_argument)))
    (separator)
    (command
      body: (write_command
        file: (file_argument)))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (write_flag
            file: (file_argument)))))
    (separator)))

==================
Invalid POSIX command separators
==================
dp
d p

---

(script
  (ERROR
    (command
      body: (delete_command)))
  (command_list
    (command
      body: (print_command))
    (separator)
    (ERROR
      (command
        body: (delete_command)))
    (command
      body: (print_command))
    (separator)))

==================
Invalid POSIX command separator recovery
==================
dp
p
d p
p

---

(script
  (ERROR
    (command
      body: (delete_command)))
  (command_list
    (command
      body: (print_command))
    (separator)
    (command
      body: (print_command))
    (separator)
    (ERROR
      (command
        body: (delete_command)))
    (command
      body: (print_command))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU branch semicolon separator
==================
b;p

---

(script
  (command_list
    (command
      body: (branch_command))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU test semicolon separator
==================
t;p

---

(script
  (command_list
    (command
      body: (test_command))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU label semicolon separator
==================
:label;p

---

(script
  (command_list
    (command
      body: (label_command
        label: (label)))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU branch label semicolon separator
==================
b label;p

---

(script
  (command_list
    (command
      body: (branch_command
        label: (label)))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU test label semicolon separator
==================
t label;p

---

(script
  (command_list
    (command
      body: (test_command
        label: (label)))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU read argument without a blank
==================
rfile
p

---

(script
  (command_list
    (command
      body: (read_command
        file: (file_argument)))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU write argument without a blank
==================
wout
p

---

(script
  (command_list
    (command
      body: (write_command
        file: (file_argument)))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU substitute write argument without a blank
==================
s/a/b/wout
p

---

(script
  (command_list
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (write_flag
            file: (file_argument)))))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
POSIX case-insensitive substitute flag
==================
s/a/b/i
p

---

(script
  (command_list
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (ignore_case_flag))))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
POSIX mixed case-insensitive substitute flags
==================
s/a/b/2ip
p

---

(script
  (command_list
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (occurrence_flag)
          (ignore_case_flag)
          (print_flag))))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU command after a block separator
==================
{p;};d

---

(script
  (command_list
    (command
      body: (block_command
        (command_list
          (command
            body: (print_command))
          (separator))))
    (separator)
    (command
      body: (delete_command))
    (separator)))

==================
GNU block terminator
==================
{p}

---

(script
  (command_list
    (command
      body: (block_command
        (command_list
          (command
            body: (print_command)))))
    (separator)))

==================
GNU block terminator followed by a command
==================
{p}
p

---

(script
  (command_list
    (command
      body: (block_command
        (command_list
          (command
            body: (print_command)))))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
Invalid POSIX regex address delimiter recovery
==================
/x
p

---

(script
  (ERROR
    (regex_content))
  (command_list
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU clear command
==================
z
p

---

(script
  (command_list
    (command
      body: (clear_command))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU empty inline text command
==================
a
p

---

(script
  (command_list
    (command
      body: (append_command
        text: (text_block)))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
Invalid POSIX block command line recovery
==================
{
  dp
  p
}

---

(script
  (command_list
    (command
      body: (block_command
        (command_list
          (separator)
          (command
            body: (delete_command))
          (ERROR)
          (separator)
          (command
            body: (print_command))
          (separator))))
    (separator)))

==================
GNU block branch semicolon separator
==================
{b;}

---

(script
  (command_list
    (command
      body: (block_command
        (command_list
          (command
            body: (branch_command))
          (separator))))
    (separator)))

==================
GNU block test semicolon separator
==================
{t;}

---

(script
  (command_list
    (command
      body: (block_command
        (command_list
          (command
            body: (test_command))
          (separator))))
    (separator)))

==================
GNU block label semicolon separator
==================
{:label;}

---

(script
  (command_list
    (command
      body: (block_command
        (command_list
          (command
            body: (label_command
              label: (label)))
          (separator))))
    (separator)))
